==> js216/stm32mp135-bootloader/drivers/stm32mp13xx_hal_pwr_ex.c <==
#include "stm32mp13xx_hal.h"
#include "stm32mp13xx_hal_conf.h"
#include <stdint.h>
#define AVD_MODE_IT             ((uint32_t)0x00010000U)
#define AVD_MODE_EVT            ((uint32_t)0x00020000U)
#define AVD_RISING_EDGE         ((uint32_t)0x00000001U)
#define AVD_FALLING_EDGE        ((uint32_t)0x00000002U)
#define AVD_RISING_FALLING_EDGE ((uint32_t)0x00000003U)
#define PWR_FLAG_SETTING_DELAY_US ((uint32_t)1000U)

void HAL_PWREx_ConfigAVD(const PWREx_AVDTypeDef *sConfigAVD)
{
   /* Check the parameters */
   assert_param(IS_PWR_AVD_LEVEL(sConfigAVD->AVDLevel));
   assert_param(IS_PWR_AVD_MODE(sConfigAVD->Mode));

   /* Set the ALS[18:17] bits according to AVDLevel value */
   MODIFY_REG(PWR->CR1, PWR_CR1_ALS, sConfigAVD->AVDLevel);

   /* Clear any previous config. Keep it clear if no IT mode is selected */
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_IT();
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_RISING_EDGE();
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_FALLING_EDGE();

   /* Configure the interrupt mode */
   if (AVD_MODE_IT == (sConfigAVD->Mode & AVD_MODE_IT)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_IT();
   }

   /* Configure the edge */
   if (AVD_RISING_EDGE == (sConfigAVD->Mode & AVD_RISING_EDGE)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_RISING_EDGE();
   }

   if (AVD_FALLING_EDGE == (sConfigAVD->Mode & AVD_FALLING_EDGE)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_FALLING_EDGE();
   }
}

void HAL_PWREx_PVD_AVD_IRQHandler(void)
{
   /* PVD EXTI line interrupt detected */
   if (READ_BIT(PWR->CR1, PWR_CR1_PVDEN) != 0U) {
      /* PWR PVD interrupt user callback */
      HAL_PWR_PVDCallback();
   }

   /* AVD EXTI line interrupt detected */
   if (READ_BIT(PWR->CR1, PWR_CR1_AVDEN) != 0U) {
      /* PWR AVD interrupt user callback */
      HAL_PWREx_AVDCallback();
   }

   /* Clear PWR PVD AVD EXTI pending bit */
   __HAL_PWR_PVD_AVD_EXTI_CLEAR_FLAG();
}
